src/test/ui/str/str-lit-type-mismatch.stderr
error[E0308]: mismatched types
  --> $DIR/str-lit-type-mismatch.rs:2:20
   |
LL |     let x: &[u8] = "foo";
   |                    ^^^^^
   |                    |
   |                    expected slice, found str
   |                    help: consider adding a leading `b`: `b"foo"`
   |
   = note: expected type `&[u8]`
              found type `&'static str`

error[E0308]: mismatched types
  --> $DIR/str-lit-type-mismatch.rs:3:23
   |
LL |     let y: &[u8; 4] = "baaa";
   |                       ^^^^^^
   |                       |
   |                       expected array of 4 elements, found str
   |                       help: consider adding a leading `b`: `b"baaa"`
   |
   = note: expected type `&[u8; 4]`
              found type `&'static str`

error[E0308]: mismatched types
  --> $DIR/str-lit-type-mismatch.rs:4:19
   |
LL |     let z: &str = b"foo";
   |                   ^^^^^^
   |                   |
   |                   expected str, found array of 3 elements
   |                   help: consider removing the leading `b`: `"foo"`
   |
   = note: expected type `&str`
              found type `&'static [u8; 3]`

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0308`.
